Closed Bug 1727703 Opened 5 years ago Closed 5 years ago

Device reset causes blank window with hardware WebRender

Categories

(Core :: Graphics: WebRender, defect)

Unspecified
Windows
defect

Tracking

()

VERIFIED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- fixed
firefox91 --- wontfix
firefox92 --- wontfix
firefox93 --- verified

People

(Reporter: sotaro, Assigned: sotaro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[STR]

  • [1] Start Firefox
  • [2] move to bugzilla bug like bug 1724949
  • [3] Call "dxcap -forcetdr" from a console

[Actual Result]
Firefox window became blank

WebRender(Software) did not caused the problem. The problem does not always happen with the STR.

See Also: → 1725034
OS: Unspecified → Windows

It seems like a regression. I did not saw the problem with STR in the past.

I tried the following mozregression.

It showed the following.

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ae1bf693f51a3345c68a8d4f4aaf76e4883f458c&tochange=ed8ff73df9a2bc82aa1a59a4d8106043c5b335c3

Regressed by: 1708325
Has Regression Range: --- → yes
See Also: → 1717347
See Also: → 1720388

bug 1712665 is going to fix such a HW WR bug for Linux: https://phabricator.services.mozilla.com/D123792

See Also: → 1712665
Assignee: nobody → sotaro.ikeda.g
Severity: -- → S2

Bug 1708325 added nsRefreshDriver::mPendingTransactions. It is not cleared during WebRenderLayerManager::DoDestroy(). Then nsRefreshDriver had 2 pending transact, then nsRefreshDriver did not trigger next rendering with new WebRenderLayerManager.

Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5f5504699d3c Clear pending transactions in WebRenderLayerManager::DoDestroy() r=mattwoodrow,gfx-reviewers
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Flags: qe-verify+

Reproduced with Fx 93.0a1 (2021-08-26) on Windows 10, but only intermittently.
Verified fixed (checked several times since the reproducibility rate was not 100%) with Fx 94.0a1 (2021-09-13) and Fx 93.0b4 on Windows 10.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Is this something we should consider taking on ESR91? It grafts cleanly.

Flags: needinfo?(sotaro.ikeda.g)

Comment on attachment 9238616 [details]
Bug 1727703 - Clear pending transactions in WebRenderLayerManager::DoDestroy()

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: When blank window happens, user could not use browser.
  • User impact if declined: WebRender could cause blank window when device reset happens on Windows.
  • Fix Landed on Version: 93.0b4
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change is a small fix during destroying WebRenderLayerManager. It affects to a case that WebRenderLayerManager is re-created. On Windows, it happens only when device reset or gpu process crash happen.
  • String or UUID changes made by this patch: none
Flags: needinfo?(sotaro.ikeda.g)
Attachment #9238616 - Flags: approval-mozilla-esr91?

Comment on attachment 9238616 [details]
Bug 1727703 - Clear pending transactions in WebRenderLayerManager::DoDestroy()

Approved for 91.2esr.

Attachment #9238616 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: