Bug 1727703 - Clear pending transactions in WebRenderLayerManager::DoDestroy() r=mattwoodrow,gfx-reviewers

When device reset happens, WebRender and WebRenderLayerManagers are re-created. In this case,  pending transactions of nsRefreshDriver need to be cleared during destroying WebRenderLayerManager.

Differential Revision: https://phabricator.services.mozilla.com/D124011